--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
         const screens = document.querySelectorAll('.screen');
         const appTitle = document.getElementById('app-title');
         const btnBack = document.getElementById('btn-back');
-        const btnBack-label = document.getElementById('btn-back-label');
+        const btnBackLabel = document.getElementById('btn-back-label'); // *** CORREZIONE: Rimosso trattino (-) dal nome variabile ***
         // const headerSpacer = document.getElementById('header-spacer'); // RIMOSSO
 
         function navigateTo(screenId, context = {}) {
@@ -3023,5 +3023,6 @@
     </script>
 </body>
 </html>
+
 
 
