--- a/index.html
+++ b/index.html
@@ -520,12 +520,12 @@
             <div class="neum-card p-5">
                 <h3 class="text-lg font-bold mb-4 flex items-center">
                     <i data-lucide="camera" class="w-5 h-5 mr-2 text-purple-600"></i>
-                    Foto della Scena
+                    Foto area sinistro
                 </h3>
                 <!-- NOTA: Il contatore qui viene aggiunto da JS (loadDashboard) -->
                 <button id="btn-goto-scene-photos" class="neum-btn w-full">
                     <i data-lucide="aperture" class="w-5 h-5 mr-2"></i>
-                    Gestisci Foto Scena
+                    Gestisci Foto area sinistro
                 </button>
             </div>
 
@@ -3023,6 +3023,7 @@
     </script>
 </body>
 </html>
+
 
 
 
